# kascov

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cloudbuild.yaml  firebase-worker.json  firebase.json
.github/workflows/: digest.yml
clients/: README.md
clients/js/: kascov-encode.mjs  kascov.mjs
clients/py/: kascov.py
crates/kascov/: Cargo.toml
crates/kascov-core/: Cargo.toml
crates/kascov-core/examples/: audit_genesis.rs  covid.rs
crates/kascov-core/src/: detect.rs  lib.rs  model.rs  store.rs  sync.rs  tokens.rs
crates/kascov-core/src/node/: mod.rs  wrpc.rs
crates/kascov-core/tests/: gap_recovery.rs  kcc20_worked_example.rs  sync_replay.rs
crates/kascov-core/tests/fixtures/: kcc20_worked_example.json
crates/kascov-decode/: Cargo.toml
crates/kascov-decode/examples/: decode_hex.rs
crates/kascov-decode/src/: disasm.rs  kcc1.rs  kcc20.rs  lib.rs  observed.rs
crates/kascov-lab/: Cargo.toml
crates/kascov-lab/src/: main.rs
crates/kascov-labkit/: Cargo.toml
crates/kascov-labkit/src/: lib.rs
crates/kascov-sim/: Cargo.toml
crates/kascov-sim/src/: lib.rs
crates/kascov/assets/: README.md  changelog.json
crates/kascov/src/: main.rs  og.rs  preflight.rs
docs/: Architecture.md  CLI Reference.md  Covenant Lab.md  Decoding.md  Feature-Roadmap.md  Home.md  Novel-Features-Plan.md  Roadmap-v2.md  Roadmap.md  Storage Schema.md  Sync Engine.md  Toccata Protocol Notes.md  Toccata-Audit.md
docs/.obsidian/: workspace.json
scripts/: deploy-worker.sh  digest-post.mjs  kascov-live.sh  kascov.Caddyfile  lifecycle.json  repair-lineage.py  vps-build-setup.ps1  vps-provision.ps1  worker-entrypoint.sh
tools/silverc/: README.md  main.rs
video/: package-lock.json  package.json  tsconfig.json
video/src/: Root.tsx  Video.tsx  VideoV10.tsx  VideoV2.tsx  VideoV3.tsx  VideoV4.tsx  VideoV5.tsx  VideoV6.tsx  VideoV7.tsx  VideoV8.tsx  VideoV9.tsx  decode.json  fonts.ts  theme.ts
video/src/lib/: Avatar.tsx  anim.ts  data.ts  decode.ts  icons.tsx  identity.ts  ui.tsx  updatestats.ts
video/src/scenes/: ColdOpen.tsx  EndCard.tsx  Idea.tsx  LifeStory.tsx  Testnet.tsx  Twist.tsx
video/src/scenes/v10/: Scenes10.tsx
video/src/scenes/v2/: EndCardV2.tsx  HookTurn.tsx  Journey.tsx  WallSaga.tsx  shared.tsx
video/src/scenes/v3/: DecodeProof.tsx  DevApi.tsx  Explorer3.tsx  Forget.tsx  Hook3.tsx  Tools3.tsx
video/src/scenes/v4/: AddressIntel.tsx  LiveChart.tsx  MobileLive.tsx  Speed.tsx  UpdateHook.tsx
video/src/scenes/v5/: GenDeploy.tsx  GenEdit.tsx  GenExtras.tsx  GenHook.tsx
video/src/scenes/v6/: EscrowSettle.tsx  ProofApps.tsx  RevealStory.tsx  RunHook.tsx
video/src/scenes/v7/: ApiScene.tsx  BuildScene.tsx  DagBg.tsx  RebuiltHook.tsx  WatchScene.tsx
video/src/scenes/v8/: DevTourScenes.tsx  ScrollFootage.tsx
video/src/scenes/v9/: UpdateScenes.tsx
web/: app.js  blake2b.js  changelog.json  community.json  dag.js  decode-payload.js  disasm.js  galaxy.js  gen.js  graph.js  guide.html  index.html  launchpads.json  og-card.html  robots.txt  style.css  vm.js
web/core/: data.js  format.js  price.js  state.js
web/data/: mainnet.json  testnet-10.json
