[package]
name = "kascov-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kaspa-wrpc-client = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-consensus-core = { workspace = true }
kaspa-notify = { workspace = true }
kaspa-addresses = { workspace = true }
kaspa-hashes = { workspace = true }

kascov-decode = { workspace = true }

tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
# tests build p2sh commitments whose hash must match what p2sh_reveal checks
blake2b_simd = { workspace = true }
