[package]
name = "kascov-lab"
version.workspace = true
edition.workspace = true
license.workspace = true

# A thin CLI over kascov-labkit, which holds all the tx-building logic.
[dependencies]
kascov-labkit = { path = "../kascov-labkit" }

tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
