[package]
name = "kascov"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kascov-core = { workspace = true }
kascov-decode = { workspace = true }
kaspa-addresses = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
flate2 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
comfy-table = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
